--- a/src/partials/main-content__item/_main-content__item.html
+++ b/src/partials/main-content__item/_main-content__item.html
@@ -1,10 +1,10 @@
 <div class="news @@newsWidth">
   <a href="" class="@@flowDrirection">
-    <div>
+    <div class="@@icon-on-image">
       <img src="@@Img_src" alt="@@Img_alt">
     </div>
     <div class="news__descr @@descrSize">
-      <p class="@@marginLeft @@fontWeight @@fontSize">@@DescrText</p>
+      <p class="@@marginLeft @@fontWeight @@fontSize @@iconAfterText">@@DescrText</p>
     </div>
   </a>
 </div>
