--- a/src/main.scss
+++ b/src/main.scss
@@ -5,22 +5,15 @@
 //  outline: 1px solid lightgrey;
 //}
 
-.container{
-  max-width: 940px;
-  min-width: 480px;
-  margin: 0 auto;
-  padding: 8px;
+body{
+  font-family:'PT Sans', sans-serif;
 }
 
-main{
- max-width: 620px;
- @media (max-width:980px) {
-  max-width: 100%;
-  margin: 0 auto;
-}
-}
 
-article.flex-row.justify-content--space-betwen{
+article{
+  display: flex;
+  justify-content: space-between;
+
   @media (max-width:980px) {
    justify-content: space-evenly;
   }
@@ -37,7 +30,7 @@ aside{
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-}
+ } 
 }
 
 footer{
@@ -57,29 +50,9 @@ a{
 }
 
 
-body>div  {
-  @media (max-width:980px) {
-    flex-direction: column;
-  }
-}
 
-.flex-column{
-  display: flex;
-  flex-direction: column;
-}
 
-.flex-row{
-  display: flex;
-  
-}
 
-.justify-content--center{
-  justify-content: center;
-}
-
-.justify-content--space-betwen{
-  justify-content: space-between;
-}
 
 p.text-align--top{
   top: -32px;
@@ -89,7 +62,7 @@ p.text-align--top{
   margin-top: 10px;
 }
 
-.marginLeft--10px{
+.marginleft--10px{
   margin-left: 10px;
 }
 
@@ -101,10 +74,6 @@ p.text-align--top{
   padding-right: 12px;
 }
 
-.font-family--PT-sans{
-  font-family:'PT Sans', sans-serif;
-}
-
 .fontSize--18px{
   font-size: 1.125rem;
 }
@@ -113,7 +82,7 @@ p.text-align--top{
   font-size: 1.5rem;
  }
 
-.fontWeight--bold{
+.fontweight--bold{
   font-weight: bold;
 }
 
@@ -131,12 +100,34 @@ p.text-align--top{
 
 
 
+
+.container{
+  max-width: 940px;
+  min-width: 480px;
+  margin: 0 auto;
+  padding: 8px;
+}
+
+.content-wrapper{
+  display: flex;
+  @media (max-width:980px) {
+    flex-direction: column;
+  }
+}
+
+.main__wrapper{
+  max-width: 620px;
+  margin: 0 auto;
+
+}
+
 .hot-news{
   list-style-type: none;
   margin-top: 30px;
   margin-bottom: 22px;
   padding-left: 0;
   background-color: #d7d8d9;
+  display: flex;
 
   @media (max-width:980px) {
     margin: 5px auto;
@@ -158,6 +149,7 @@ p.text-align--top{
 
 
 .carousel{
+  display: flex;
   border-bottom: 5px solid #c70000;
   margin-bottom: 32px;
   @media (max-width:650px){
@@ -241,16 +233,26 @@ p.text-align--top{
 
 
 .news-title{
+  display: flex;
   position: relative;
   border-bottom: 2px solid black;
   margin: 13px 0;
- 
+  
+
   &.border-color--red{
     border-color: #c80000;
   }
 
   &.border-width--5px{
     border-width: 5px;
+  }
+  
+  &-center{
+    display: flex;
+    position: relative;
+    border-bottom: 2px solid black;
+    margin: 13px 0;
+    justify-content: center;
   }
 
   &__text{
@@ -276,6 +278,7 @@ p.text-align--top{
 
 
 .news-main_content{
+  display: flex;
   min-height: 220px;
   flex-grow: 0;
   flex-shrink: 0;
@@ -285,7 +288,7 @@ p.text-align--top{
     justify-content: space-evenly;
     
   }
- & div{
+ &> .news-main_item{
   @media (max-width:650px){
   flex-basis: 50%; 
 
@@ -318,6 +321,8 @@ p.text-align--top{
 
 
 .news-with-pic{
+  display: flex;
+  justify-content: space-between;
   flex-shrink: 0;
   align-items: center;
   position: relative;
@@ -372,6 +377,7 @@ p.text-align--top{
 }
 
 .news-review{
+  display: flex;
   justify-content: space-evenly;
   padding-bottom: 20px;
   border-bottom: 2px solid black;
@@ -407,14 +413,14 @@ p.text-align--top{
   }
 }
 
-.news-review.flex-row>div:first-child{
+.news-review>div:first-child{
   @media (max-width:980px) {
   display: none;
   padding: 10px 0 0 0;
   }
 }
 
-.news-review.flex-row>div:last-child{
+.news-review>div:last-child{
   @media (max-width:660px) {
     display: none;
     padding: 10px 0 0 0;
