--- a/src/main.scss
+++ b/src/main.scss
@@ -54,13 +54,9 @@ a{
 
 
 
-p.text-align--top{
-  top: -32px;
-}
 
-.margin-top--10px{
-  margin-top: 10px;
-}
+
+
 
 .marginleft--10px{
   margin-left: 10px;
@@ -235,9 +231,21 @@ p.text-align--top{
 .news-title{
   display: flex;
   position: relative;
-  border-bottom: 2px solid black;
   margin: 13px 0;
-  
+
+  &-center{
+    display: flex;
+    position: relative;
+    justify-content: center;
+    
+  }
+
+
+ &__line{
+  position: absolute;
+  width: 100%;
+  border-bottom: 2px solid black;
+  bottom: 0;
 
   &.border-color--red{
     border-color: #c80000;
@@ -246,21 +254,22 @@ p.text-align--top{
   &.border-width--5px{
     border-width: 5px;
   }
-  
-  &-center{
-    display: flex;
-    position: relative;
+
+  &-middle{
+    position: absolute;
+    bottom: 50%;
+    width: 100%;
     border-bottom: 2px solid black;
-    margin: 13px 0;
-    justify-content: center;
   }
 
-  &__text{
-    position: absolute;
+ }
+ 
+
+ &__text{
     background-color: white;
     font-size: 1.5em;
     margin: 0;
-    top: -20px;
+    z-index: 1;
     
     &.text-color--purple{
       color: #6a0099;
@@ -348,6 +357,10 @@ p.text-align--top{
 
 .news-video__wrapper{
   max-width: 300px;
+  @media (max-width:620px) {
+  margin: 30px 4px;
+
+  }
 }
 
 .news-video__item, .news-interesting{
@@ -363,18 +376,21 @@ p.text-align--top{
 }
 
 .more-videos{
-  padding: 20px 0;
+  position: relative;
+  padding: 4px 0;
 }
 
+.news-interesting__wrapper{
+  padding: 30px 4px 20px 4px;
 
-.news-interesting{
-  padding: 30px 0 20px 0;
-  margin: 0 8px 0 8px;
   @media (max-width:980px) {
-    padding: 20px 0 0 0;
+    padding: 0 4px;
   }
-  
+  & .news-title>p{
+    margin: 4px 0;
+  }
 }
+
 
 .news-review{
   display: flex;
@@ -569,3 +585,5 @@ p.text-align--top{
    
   }
 }
+
+
