--- a/src/main.scss
+++ b/src/main.scss
@@ -1,3 +1,5 @@
+@import "./partials/event__item/event__item.scss";
+
 body * {
   outline: 1px solid lightgrey;
 }
@@ -12,6 +14,9 @@ main{
   background-size: cover;
   min-height: 100vh;
   max-width: 100vw;
+  & .container{
+    padding: 15px;
+  }
 }
 
 .icons__wrapper{
@@ -75,9 +80,11 @@ main{
 }
 
 .container{
+  display: flex;
+  align-items: center;
   max-width: 1200px;
+  height: inherit;
   margin: 0 auto;
-  padding: 15px;
   box-sizing: border-box;
 }
 
@@ -96,13 +103,11 @@ main{
 .top__text{
   display: flex;
   align-items: center;
-
+  max-width: 570px;
+  height: 460px;
   & h1{
     font-size: 72px;
     text-transform: uppercase;
-    margin: 140px 0 85px;
-    width: 570px;
-
   }
 }
 
@@ -117,7 +122,17 @@ main{
   background: #000000;
   text-decoration: none;
   cursor: pointer;
-  
+  &.small{
+    width: 170px;
+    height: 40px;
+    border-radius: 4px;
+    & p{
+      font-size: 14px;
+    }
+    & span{
+      font-size: 18px;
+    }
+  }
   & p{
     text-transform: uppercase;
     font-size: 24px;
@@ -172,9 +187,8 @@ main{
 .column{
   display: flex;
   flex-direction: column;
-  max-width: 570px;
   padding: 0 15px;
- &__image{
+ &__image img{
    max-width: 100%;
    height: auto;
  }
@@ -185,15 +199,147 @@ section{
   position: relative;
   background-image: url("./img/colorful-set-plate.png");
   height: 700px;
+  z-index: -1;
+  
  & .gradient{
    position: absolute;
    width: 100%;
    height: 100%;
    background: rgba($color: #292929, $alpha: 0.6);
+   z-index: -1;
  }
+
 }
 
-.comment__wrapper{
-  max-width: 100px;
-  max-height: 410px;
+.carousel{
+  max-width: 1000px;
+  margin: 0 auto;
+  color: #ffffff;
+  font-size: 16px;
+  text-align: center;
+  
+
+
+  &__image{
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    margin: 0 auto;
+    background: url("./img/happyface.png");
+    border: 3px solid #ffffff;
+  }
+  &__text{
+    margin: 40px 18px 35px;
+    padding: 0 18px;
+    font-size: 16px;
+  }
+  &__user{
+    font-weight: bold;
+    & span{
+      margin-left: 15px;
+    }
+  }
+  &__dots{
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 106px;
+   & div{
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color: #d5d5d5;
+    margin: 10px;
+    &:first-child{
+      background: orange;
+    }
+   }
+  }
+}
+
+.event{
+  & .container{
+    flex-direction: column;
+  }
+  & .two-column__wrapper{
+    padding: 51px 0 185px;
+  }
+  &__title{
+    margin: 0 auto;
+    max-width: 370px;
+    font-size: 36px;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: center;
+    & p{
+      margin-bottom:10px;
+    }
+    & p:last-child{
+      color: #b9b9b9;
+      font-size:24px;
+      text-transform: capitalize;
+      font-weight: normal;
+      margin-top: 0;
+    }
+  }
+}
+
+
+.main-event__item{
+  position: relative;
+  max-width: 470px;
+  max-height: 470px;
+  & .main-event__text{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    position: absolute;
+    top: 35px;
+    right: 35px;
+    width: 400px;
+    height: 400px;
+    background-color: #ffffff;
+    font-size: 16px;
+    
+  }
+  & .main-event__date{
+    margin:0 auto;
+    width: 130px;
+    height: 112px;
+    background: black;
+   & .date-numb{
+     margin: 5px;
+     font-size: 60px;
+     color: #edc08a;
+   }
+   & .date-month{
+    font-size: 18px;
+    margin: 0;
+    color: #ffffff;
+   }
+  }
+
+  & .main-event__name{
+    font-size: 20px;
+    font-weight: bold;
+    margin: 40px 0 7px;
+  }
+
+  & .main-event__location{
+    margin: 7px 0;
+    font-style: italic;
+  }
+
+  & .main-event__descr{
+    margin-bottom: 50px;
+  }
+
+  & span{
+    display: block;
+    margin-top: 3px;
+  }
+  & .top__button.small{
+    margin: 0 auto;
+  }
 }
