--- a/src/main.scss
+++ b/src/main.scss
@@ -60,7 +60,7 @@ main{
 .menu__items{
   display: none;
   position: absolute;
-  top: calc(100% + 10px);
+  top: 100%;
   right: -50%;
   padding: 5px;
   font-size: 1.25rem;
