--- a/src/main.scss
+++ b/src/main.scss
@@ -423,6 +423,7 @@ section{
     width:570px;
     height:570px;
     border:0;
+    padding-bottom: 2px;
     @media screen and (max-width:620px) {
         display: none;
     }
