--- a/src/partials/event__item/_event__item.html
+++ b/src/partials/event__item/_event__item.html
@@ -15,11 +15,11 @@
       <p class="event__descr">
           @@Event_descr
       </p>
-      <div class="top__button small">
+      <a href="" class="top__button small">
         <p>buy ticket</p>
         <span class="material-icons">
           east
         </span>
-      </div>
+      </a>
     </div>
   </div>
