--- a/src/main.scss
+++ b/src/main.scss
@@ -5,9 +5,9 @@ html{
   scroll-behavior: smooth;
 }
 
-body * {
-  outline: 1px solid lightgrey;
-}
+//body * {
+//  outline: 1px solid lightgrey;
+//}
 
 body{
   margin: 0;
@@ -18,10 +18,14 @@ body{
 main{
   background-image: url("./img/main.png");
   background-size: cover;
-  min-height: 100vh;
-  max-width: 100vw;
+  & .gradient{
+    position: absolute;
+    width: 100%;
+    height: 20%;
+    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,253,253,0) 100%);
+  }
   & .container{
-    padding: 15px;
+    padding: 0 15px;
   }
 }
 
@@ -31,7 +35,7 @@ main{
   right: 160px;
   display: flex;
   align-items: center;
-  z-index: 10;
+  z-index: 1;
   @media screen and (max-width:1000px) {
     right: 10%;
   }
@@ -110,7 +114,9 @@ main{
 
 
 .top__wrapper{
-  padding-top: 27px;
+  min-height: calc(100vh - 55px);
+  padding-top: 55px;
+  z-index: 1;
 }
 
 .logo{
@@ -225,22 +231,48 @@ main{
 section{
   position: relative;
   background-image: url("./img/colorful-set-plate.png");
+  background-size: cover;
   height: 700px;
-  z-index: -1;
+
   
  & .gradient{
    position: absolute;
    width: 100%;
    height: 100%;
    background: rgba($color: #292929, $alpha: 0.6);
-   z-index: -1;
+   z-index: 1;
  }
 
 }
 
-.carousel{
+.swiper-container {
+  width: 1000px;
+  height: 70%;
+  & div.swiper-pagination{
+    bottom: 0;
+    &.swiper-pagination-bullets{
+      bottom: 0;
+      & span.swiper-pagination-bullet{
+        width: 15px;
+        height: 15px;
+        margin: 8px;
+        background: #d5d5d5;
+        opacity: 1;
+        &-active{
+          width: 15px;
+          height: 15px;
+          background: #edc08a;
+        }
+      }
+    }
+  }
+ 
+}
+
+
+.swiper-item{
   max-width: 1000px;
-  margin: 0 auto;
+  margin: 20px auto;
   color: #ffffff;
   font-size: 16px;
   text-align: center;
@@ -258,8 +290,7 @@ section{
   &__text{
     margin: 40px 18px 35px;
     padding: 0 18px;
-    font-size: 16px;
-  }
+    }
   &__user{
     font-weight: bold;
     & span{
@@ -284,6 +315,9 @@ section{
    }
   }
 }
+
+
+
 
 .event{
   padding: 185px 0;
@@ -410,7 +444,6 @@ section{
   }
   &__content{
     display: flex;
-    min-height: 570px;
     width: 100%;
     padding: 0 15px;
     @media screen and (max-width:1000px) {
@@ -423,6 +456,11 @@ section{
       width:100%;
     }
   }
+
+  &__map{
+    max-height: 570px;
+  }
+
   & .ifame{
     width:570px;
     height:570px;
@@ -513,33 +551,40 @@ section{
 .form{
   display: flex;
   align-items: center;
+  width: 100%;
  
   & input{
     display: inline-block;
     width: 100%;
     height: 75px;
     margin: 15px;
-    color: #b9b9b9;
     border-width: 2px;
     border-color:#b9b9b9;
     border-style: solid;
+    &::placeholder {
+      color: #b9b9b9;
+      
+    }
   }
 
   & input[type="text"]{
     padding: 0 5px;
   }
-
+ 
+ 
   & select{
     width: 100%;
     height: 79px;
-    color: #b9b9b9;
     border-width: 2px;
     border-color:#b9b9b9;
-
+    margin: 0 15px;
+    & :first-child{
+      color: #b9b9b9;
+      
+    }
+  }
   }
 
-  
-}
 
 footer{
   background-color: black;
